--- a/_layouts/blog_list.html
+++ b/_layouts/blog_list.html
@@ -5,7 +5,6 @@ layout: default
 <div class="blog-container">
   <header class="blog-header">
     <h1>{{ page.title }}</h1>
-    <a href="{{ '/' | relative_url }}" class="back-link">← Powrót do startu</a>
   </header>
 
   <div class="posts-list">
@@ -45,11 +44,13 @@ layout: default
 }
 
 .blog-header h1 {
-  font-size: 3rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  margin-bottom: 10px;
+  font-family: var(--font-serif);
+  font-weight: 400;
+  font-style: italic;
+  font-size: 3.5rem;
+  text-transform: none;
+  letter-spacing: 2px;
+  margin-bottom: 40px;
 }
 
 .back-link {
