--- a/_layouts/project_detail.html
+++ b/_layouts/project_detail.html
@@ -248,7 +248,7 @@ document.addEventListener('keydown', function(event) {
   }
 }
 .site-header, .site-footer {
-  display: none !important;
+  display: block;
 }
 
 .project-detail-container {
