--- a/_layouts/blog_list.html
+++ b/_layouts/blog_list.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="blog-container">
   <header class="blog-header">
+    <a href="{{ '/' | relative_url }}" class="back-link">← Powrót do startu</a>
     <h1>{{ page.title }}</h1>
   </header>
 
@@ -22,7 +23,7 @@ layout: default
 
 <style>
 .site-header, .site-footer {
-  display: none !important;
+  display: block;
 }
 
 .blog-container {
