--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="cv-container">
   <header class="cv-header">
+    <a href="{{ '/' | relative_url }}" class="back-link">← Powrót do startu</a>
     <h1>{{ page.title }}</h1>
   </header>
 
@@ -61,7 +62,7 @@ layout: default
 
 <style>
 .site-header, .site-footer {
-  display: none !important;
+  display: block;
 }
 
 .cv-container {
